--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -19,13 +19,22 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
     integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/notyf/3.10.0/notyf.min.css"
-    integrity="sha512-ZX18S8AwqoIm9QCd1EYun82IryFikdJt7lxj6583zx5Rvr5HoreO9tWY6f2VhSxvK+48vYFSf4zFtX/t2ge62g=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="/static/site.css" />
 </head>
 
 <body class="text-left">
+  <div class="toast-container position-fixed top-0 end-0 p-3" style="z-index: 11">
+    <div id="toastTemplate" class="toast align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="d-flex w-100 align-items-center">
+        <div class="toast-body flex-grow-1">
+          <i class="toast-icon me-2"></i>
+          <span class="toast-message"></span>
+        </div>
+        <button type="button" class="btn-close my-auto me-2" data-bs-dismiss="toast" aria-label="Close"></button>
+      </div>
+    </div>
+  </div>
+
   <div class="form form-signin">
     <div class="text-center main-title">
       <div class="icon-wrapper">
@@ -47,58 +56,61 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js"
     integrity="sha512-7Pi/otdlbbCR+LnW+F7PwFcSDJOuUJB3OxtEHbg4vSMvzvJjde4Po1v4BR9Gdc9aXNUNFVUY+SK51wWT8WF0Gg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/notyf/3.10.0/notyf.min.js"
-    integrity="sha512-467grL09I/ffq86LVdwDzi86uaxuAhFZyjC99D6CC1vghMp1YAs+DqCgRvhEtZIKX+o9lR0F2bro6qniyeCMEQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script>
-    window.toast = new Notyf({
-      duration: 5000,
-      position: { x: 'right', y: 'top' },
-      dismissible: true,
-      ripple: true,
-      types: [
-        {
-          type: 'success',
-          background: '#8AFF80',
-          className: 'notyf-success-dark',
-          icon: {
-            className: 'fas fa-check',
-            tagName: 'i',
-            color: '#22212C'
-          }
-        },
-        {
-          type: 'error',
-          background: '#FF9580',
-          icon: {
-            className: 'fas fa-exclamation-triangle',
-            tagName: 'i',
-            color: '#22212C'
-          }
-        },
-        {
-          type: 'info',
-          background: '#9580FF',
-          icon: {
-            className: 'fas fa-spinner fa-spin',
-            tagName: 'i',
-            color: 'white'
-          }
-        }
-      ]
-    });
-  </script>
-  <style>
-    .notyf-success-dark .notyf__message,
-    .notyf__toast--error .notyf__message {
-      color: #22212C !important;
-    }
+    window.toast = {
+      _show: function (type, message, duration = 5000) {
+        const template = document.getElementById('toastTemplate');
+        const toastEl = template.cloneNode(true);
+        toastEl.removeAttribute('id');
 
-    .notyf-success-dark .notyf__dismiss-btn,
-    .notyf__toast--error .notyf__dismiss-btn {
-      background-color: #22212C !important;
-    }
-  </style>
+        const icon = toastEl.querySelector('.toast-icon');
+        const messageEl = toastEl.querySelector('.toast-message');
+
+        if (type === 'success') {
+          icon.className = 'fas fa-check toast-icon me-2';
+          toastEl.style.backgroundColor = 'var(--green)';
+        } else if (type === 'error') {
+          icon.className = 'fas fa-exclamation-triangle toast-icon me-2';
+          toastEl.style.backgroundColor = 'var(--red)';
+        } else if (type === 'info') {
+          icon.className = 'fas fa-spinner fa-spin toast-icon me-2';
+          toastEl.style.backgroundColor = 'var(--purple)';
+        }
+
+        messageEl.textContent = message;
+
+        const container = document.querySelector('.toast-container');
+        container.appendChild(toastEl);
+
+        const bsToast = new bootstrap.Toast(toastEl, {
+          delay: duration,
+          autohide: type !== 'info'
+        });
+        bsToast.show();
+
+        toastEl.addEventListener('hidden.bs.toast', () => {
+          toastEl.remove();
+        });
+
+        return toastEl;
+      },
+      success: function (message) {
+        return this._show('success', message);
+      },
+      error: function (message) {
+        return this._show('error', message);
+      },
+      open: function (config) {
+        return this._show(config.type, config.message, config.duration || 5000);
+      },
+      dismiss: function (toastEl) {
+        if (toastEl) {
+          const bsToast = bootstrap.Toast.getInstance(toastEl);
+          if (bsToast) bsToast.hide();
+        }
+      }
+    };
+  </script>
   <script src="/static/wasm_exec.js"></script>
   <script src="/static/main.js"></script>
 </body>
